[package]
name = "belote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
postage = "0.5.0"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
crossbeam-channel = "0.5.8"
